# pangraph

./: .gitignore  .travis.yml  DOCS.md  LICENSE  README.md  README.md.txt  Test.hs  changelog.md  gmlp.cabal  pangraph.cabal  stack.yaml
.github/: haskell.yml
.stack-work/install/2be2fa4e/flag-cache/: HUnit-1.3.1.1-73aae8430998277e80d1855262ebbb19  hxt-9.3.1.15-ae1d1fe2730fb68c809c7885ef11e1e2  hxt-charproperties-9.2.0.1-48917041e31b35435e539a17eb313afb  hxt-regex-xmlschema-9.2.0.2-0731a876228e3033b89d6614045c875f  hxt-unicode-9.0.2.4-b9d3d0dcb714ecc071d313a1d4d8a8ea  mtl-2.2.1-da65438efa2da7da786ed7a301e4d66a  network-uri-2.6.1.0-304fc84ad46b06f108891e5231c24c70  parsec-3.1.11-42a3a64255e77ccde1aa329ddeca3ca4  text-1.2.2.1-262d8efb5725614e4cb9c7d162d455f7
.stack-work/install/72e7e322/flag-cache/: mtl-2.2.1-b85491d29485f54f395006786223e6a0  parsec-3.1.11-8402e6a5a9c414fce8d2f362a057749d  text-1.2.2.1-a8790720b026d1fe28baa6e14c0f00e3
.stack-work/install/876f4a9f/flag-cache/: gmlp-0.1.0.0  gmlp-0.1.0.0-27c413fd60dbe4fa156fb531d9471a9f  mtl-2.2.1-da65438efa2da7da786ed7a301e4d66a  parsec-3.1.11-42a3a64255e77ccde1aa329ddeca3ca4  text-1.2.2.1-262d8efb5725614e4cb9c7d162d455f7
.stack-work/install/876f4a9f/lib/i386-windows-ghc-7.10.3/gmlp-0.1.0.0-3M29I1e6N7FDSykZk1FK9j/: Gmlp.hi
.stack-work/logs/: mtl-2.2.1.log.txt  parsec-3.1.11.log.txt  text-1.2.2.1.log.txt
Test/: OldTest.hs
app/: GML.hs  Main.hs  Parser.hs  ReadWrite.hs  ReadingOnly.hs  Work.hs
examples/: labelled-graph.gml  petersen.gml  temp2.graphml  temp3.graphml
examples/code/: Reading.hs  VHDL.hs  Writing.hs
examples/graphs/: model.xml  n1.graphml  n2.graphml  small.graphml
examples/graphs/n1/: n1-graph.vhdl  n1-sim-environment.vhdl
examples/graphs/n2/: n2-graph.vhdl  n2-sim-environment.vhdl
fantasi/: Main.hs
fantasi/Tuura/Fantasi/: Main.hs  Options.hs
pangraph/: Main.hs
pangraph/Tuura/Pangraph/: Main.hs  Options.hs
src/: Gmlp.hs  Main.hs  MyXML.hs  Pangraph.hs  Parsers.hs  PubTypes.hs  Shorten.hs  Types.hs  V1.hs  WorkP.hs  WorkPNew.hs  med.graphml.xml  small.graphml.xml
src/Pangraph/: AlgebraicGraphs.hs  Containers.hs  Example.hs  FGL.hs  Graph.hs  Parser.hs  ProtoGraph.hs  VHDL.hs  Writer.hs  XMLTemplate.hs
src/Pangraph/Examples/: GML.hs  Gml.hs  Reading.hs  SampleGraph.hs  ToContainersGraph.hs  Writing.hs
src/Pangraph/GML/: Ast.hs  Parser.hs  Writer.hs
src/Pangraph/Gml/: Ast.hs  Parser.hs  Writer.hs
src/Pangraph/GraphML/: Parser.hs  Shorten.hs  Writer.hs
src/Pangraph/Internal/: Error.hs  Graph.hs  GraphType.hs  Hexml.hs  HexmlExtra.hs  ProtoGraph.hs  XMLTemplate.hs
src/Pangraph/Pajek/: Ast.hs  Parser.hs  Writer.hs
src/Pangraph/Util/: FileHandler.hs  MyXML.hs  MyZip.hs  Types.hs
src/Pangraph/VHDL/: EnvironmentWriter.hs  GraphWriter.hs  Writer.hs
src/Pangraph/VHDL/Internal/: EnvironmentWriter.hs  GraphWriter.hs
src/Pangraph/Workcraft/: Internal.hs  Parser.hs
src/Parsers/: Discrim.hs  GmlP.hs  GmlParser.hs  Parser.hs  Shorten.hs  WorkP.hs  WorkParser.hs
src/Util/: MyXML.hs  MyZip.hs  Types.hs
src/Writers/: Discrim.hs  GmlW.hs  GmlWriter.hs  VhdlWriter.hs  Writer.hs
test/: Containers.hs  FGL.hs  GML.hs  Gml.hs  GraphML.hs  Main.hs  Pajek.hs  Show.hs  TestPangraph.hs  VHDL.hs  VHDLLiterals.hs  show-string.txt
