name:                gmlp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/gmlp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gmlp
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable gmlp
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , gmlp
