name:                gmlp
version:             0.1.0.0
synopsis:            A set of parsers for xml like graph languages.
description:         Please see README.md
homepage:            https://github.com/thisiswhereitype/gmlp#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Scott
maintainer:          notwhereitype@gmail.com
copyright:           2016 Joe Scott
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gmlp
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable gmlp
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , parsec
