name:                 pangraph
version:              0.1.1.5
synopsis:             A set of parsers for graph languages.
description:          Please see README.md
homepage:             https://github.com/tuura/pangraph#readme
license:              BSD3
license-file:         LICENSE
author:               Joe Scott
maintainer:           notwhereitype@gmail.com
copyright:            2016 Joe Scott
category:             Web
build-type:           Simple
cabal-version:        >=1.10
tested-with:          GHC==8.0.2

library
  hs-source-dirs:     src
  exposed-modules:    Pangraph
                   ,  Pangraph.GraphML.Parser
                   ,  Pangraph.VHDL
                   ,  Pangraph.VHDL.Internal.GraphWriter
                   ,  Pangraph.VHDL.Internal.EnvironmentWriter
                   ,  Pangraph.Internal.XMLTemplate
  other-modules:      Pangraph.Examples.Reading
  build-depends:      base >= 4.8 && < 5
                   ,  bytestring
                   ,  hexml
                   ,  containers
  default-language:   Haskell2010
  GHC-options:        -Wall -fwarn-tabs -O2

test-suite pangraph-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Show
                   ,  GraphML
                   ,  VHDL
                   ,  VHDLLiterals
  build-depends:      base >= 4.8 && < 5
                   ,  pangraph
                   ,  bytestring
                   ,  HUnit
  default-language:   Haskell2010
  GHC-options:        -Wall -fwarn-tabs -fbreak-on-exception

executable fantasi
  hs-source-dirs:   fantasi
  main-is:          Main.hs
  other-modules:    Tuura.Fantasi.Main,
                    Tuura.Fantasi.Options

  build-depends:    base >= 4.8 && < 5,
                    filepath,
                    pangraph,
                    bytestring
  default-language: Haskell2010
  GHC-options:      -Wall -fwarn-tabs
