name:                 pangraph
version:              0.1.1.5
synopsis:             A set of parsers for graph languages.
description:          Please see README.md
homepage:             https://github.com/tuura/pangraph#readme
license:              BSD3
license-file:         LICENSE
author:               Joe Scott
maintainer:           notwhereitype@gmail.com
copyright:            2016 Joe Scott
category:             Web
build-type:           Simple
cabal-version:        >=1.10
tested-with:          GHC==8.0.2

library
  hs-source-dirs:     src
  exposed-modules:    Pangraph
                   ,  Pangraph.Containers
                   ,  Pangraph.GraphML.Parser
                   ,  Pangraph.GraphML.Writer
                   ,  Pangraph.Internal.XMLTemplate
                   ,  Pangraph.Examples.Reading
                   ,  Pangraph.Examples.Writing
                   ,  Pangraph.Examples.ToContainersGraph
                   ,  Pangraph.Examples.SampleGraph
  build-depends:      base >= 4.8 && < 5
                   ,  bytestring
                   ,  hexml
                   ,  containers
                   ,  algebraic-graphs == 0.1.1.*
  default-language:   Haskell2010
  GHC-options:        -Wall -fwarn-tabs -O2

test-suite pangraph-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Show
                   ,  GraphML
                   ,  Containers
  build-depends:      base >= 4.8 && < 5
                   ,  pangraph
                   ,  bytestring
                   ,  HUnit
                   ,  containers
  default-language:   Haskell2010
  GHC-options:        -Wall -fwarn-tabs -fbreak-on-exception
