name:                 pangraph
version:              0.1.2
synopsis:             A set of parsers for graph languages and conversions to 
                      graph libaries.
description:          A package allowing parsing of graph files into graph 
                      library datatypes. With aim the cope with large networks 
                      and provide translations between graph libraries. Like a 
                      pandoc but for graphs. This is my first library so any 
                      feedback and help is appreicated. For example use please 
                      see the homepage.
homepage:             https://github.com/tuura/pangraph#readme
license:              BSD3
license-file:         LICENSE
author:               Joe Scott
maintainer:           joseph-scott@hotmail.co.uk
copyright:            2016-2018 Joesph Scott
category:             Data Structures, Graphs, Parser
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Pangraph
                   ,  Pangraph.Containers
                   ,  Pangraph.FGL
                   ,  Pangraph.GraphML.Parser
                   ,  Pangraph.GraphML.Writer
                   ,  Pangraph.Internal.XMLTemplate
                   ,  Pangraph.Examples.Reading
                   ,  Pangraph.Examples.Writing
                   ,  Pangraph.Examples.ToContainersGraph
                   ,  Pangraph.Examples.SampleGraph
                   ,  Pangraph.Examples.Gml
                   ,  Pangraph.Gml.Ast
                   ,  Pangraph.Gml.Parser
                   ,  Pangraph.Gml.Writer
  build-depends:      base >= 4.8 && < 5
                   ,  bytestring
                   ,  hexml
                   ,  containers
                   ,  algebraic-graphs == 0.1.1.*
                   ,  fgl == 5.6.0.0
                   ,  attoparsec
                   ,  text
                   ,  html-entities
  default-language:   Haskell2010
  GHC-options:        -Wall -fwarn-tabs -O2

test-suite pangraph-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Containers
                   ,  FGL
                   ,  GraphML
                   ,  Show
                   ,  TestPangraph
                   ,  Gml
  build-depends:      base >= 4.8 && < 5
                   ,  containers
                   ,  bytestring
                   ,  HUnit
                   ,  pangraph
  default-language:   Haskell2010
  GHC-options:        -Wall -fwarn-tabs -fbreak-on-exception

